2001-05-05  Christian Krone  <christian.krone@softwareag.com>

	* src/jacl/tcl/lang/Interp.java (resolvers,
	Interp, eventuallyDispose, ResolverScheme,
	addInterpResolver, getInterpResolver,
	removeInterpResolver):
	* src/jacl/tcl/lang/NamespaceCmd.java (createNamespace,
	findCommand, findNamespaceVar, setNamespaceResolver,
	getNamespaceResolver, Namespace):
	* src/jacl/tcl/lang/Resolver.java: New file.
	* src/jacl/tcl/lang/Var.java (lookupVar):
	* src/jacl/tcl/lang/library/init.tcl (unknown):
	Add interp and namespace variable and command
	resolver implementation.

2001-02-07  Christian Sorensen  <cs@maerskdata.dk>

	* src/jacl/tcl/lang/FileCmd.java (getMtime):
	Divide the File.lastModified() result by
	1000 so that the returned result will
	be in seconds instead of milliseconds.

2001-01-28  Mo DeJong  <mdejong@redhat.com>

	* src/tcljava/tcl/lang/JavaImportCmd.java:
	Fix up diction of error messages.

2001-01-28  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/SubstCmd.java:
	Use a StringBuffer instead of repeatedly
	concatenating strings together. Remove
	unneeded if block. These changes should
	improve the execution time of the
	subst command.

2001-01-28  Mo DeJong  <mdejong@redhat.com>

	* tests/tcl/join.test:
	* tests/tcl/lindex.test:
	* tests/tcl/link.test:
	* tests/tcl/linsert.test:
	* tests/tcl/list.test:
	* tests/tcl/listObj.test:
	* tests/tcl/llength.test:
	* tests/tcl/lrange.test:
	* tests/tcl/lreplace.test:
	* tests/tcl/lsearch.test:
	* tests/tcl/misc.test:
	* tests/tcl/namespace-old.test:
	* tests/tcl/namespace.test:
	* tests/tcl/obj.test:
	* tests/tcl/parse.test:
	* tests/tcl/parseExpr.test:
	* tests/tcl/parseOld.test:
	* tests/tcl/pkg.test:
	* tests/tcl/platform.test:
	* tests/tcl/proc-old.test:
	* tests/tcl/proc.test:
	* tests/tcl/pwd.test:
	* tests/tcl/regexp.test:
	* tests/tcl/rename.test:
	* tests/tcl/scan.test:
	* tests/tcl/security.test:
	* tests/tcl/set-old.test:
	* tests/tcl/set.test:
	* tests/tcl/split.test:
	* tests/tcl/stack.test: