@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: JavaImportCmd.test,v 1.2 2000/12/22 09:47:15 mdejong Exp $
+# RCS: @(#) $Id: JavaImportCmd.test,v 1.3 2001/05/06 03:19:41 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -38,11 +38,11 @@ test JavaImportCmd-1.3 {-package does not accept the empty string} {
     list [catch {java::import -package ""} msg] $msg
 } [list 1 $usage]
 
-test JavaImportCmd-1.4 {-package given, can not import class in package} {
+test JavaImportCmd-1.4 {-package given, cannot import class in package} {
     list [catch {java::import -package java.util pkg.Hashtable} msg] $msg
 } {1 {class argument must not contain a package specifier when the -package pkg arguments are given}}
 
-test JavaImportCmd-1.5 {-package given, can not forget class in package} {
+test JavaImportCmd-1.5 {-package given, cannot forget class in package} {
     list [catch {java::import -forget -package java.util pkg.Hashtable} msg] $msg
 } {1 {class argument must not contain a package specifier when the -package pkg arguments are given}}
 
@@ -139,94 +139,94 @@ test JavaImportCmd-3.0 {error to forget a class that was not imported} {
     set l {}
     java::import java.util.Hashtable
     list [catch {java::import -forget java.util.Vector} err] $err
-} {1 {can not forget class "java.util.Vector", it was never imported}}
+} {1 {cannot forget class "java.util.Vector", it was never imported}}
 
 test JavaImportCmd-3.1 {error to forget a class that was not imported} {
     forget_all
     set l {}
     java::import java.util.Hashtable
     list [catch {java::import -forget -package java.util Vector} err] $err
-} {1 {can not forget class "java.util.Vector", it was never imported}}
+} {1 {cannot forget class "java.util.Vector", it was never imported}}
 
 test JavaImportCmd-3.2 {error to import a class in the java.lang package} {
     forget_all
     list [catch {java::import java.lang.String} err] $err
-} {1 {can not import class "java.lang.String", it is in the java.lang package}}
+} {1 {cannot import class "java.lang.String", it is in the java.lang package}}
 
 test JavaImportCmd-3.3 {error to import a class in the java.lang package} {
     forget_all
     list [catch {java::import java.lang.String} err] $err
-} {1 {can not import class "java.lang.String", it is in the java.lang package}}
+} {1 {cannot import class "java.lang.String", it is in the java.lang package}}
 
 test JavaImportCmd-3.4 {error to forget a class in the java.lang package} {
     forget_all
     list [catch {java::import -forget java.lang.String} err] $err
-} {1 {can not forget class "java.lang.String", it is in the java.lang package}}
+} {1 {cannot forget class "java.lang.String", it is in the java.lang package}}
 
 test JavaImportCmd-3.5 {error to forget a class in the java.lang package} {
     forget_all
     list [catch {java::import -forget -package java.lang String} err] $err
-} {1 {can not forget class "java.lang.String", it is in the java.lang package}}
+} {1 {cannot forget class "java.lang.String", it is in the java.lang package}}
 
 test JavaImportCmd-3.6 {error to import a class that is not on the CLASSPATH} {
     forget_all
     list [catch {java::import java.util.NOT_THERE} err] $err
-} {1 {can not import class "java.util.NOT_THERE", it does not exist}}
+} {1 {cannot import class "java.util.NOT_THERE", it does not exist}}
 
 test JavaImportCmd-3.7 {error to import a primitive type} {
     forget_all
     list [catch {java::import int} err] $err
-} {1 {can not import primitive type "int"}}
+} {1 {cannot import primitive type "int"}}
 
 test JavaImportCmd-3.8 {error to import a primitive type} {
     forget_all
     list [catch {java::import boolean} err] $err
-} {1 {can not import primitive type "boolean"}}
+} {1 {cannot import primitive type "boolean"}}
 
 test JavaImportCmd-3.9 {error to import a primitive type} {
     forget_all
     list [catch {java::import long} err] $err
-} {1 {can not import primitive type "long"}}
+} {1 {cannot import primitive type "long"}}
 
 test JavaImportCmd-3.10 {error to import a primitive type} {
     forget_all
     list [catch {java::import float} err] $err
-} {1 {can not import primitive type "float"}}
+} {1 {cannot import primitive type "float"}}
 
 test JavaImportCmd-3.11 {error to import a primitive type} {
     forget_all
     list [catch {java::import double} err] $err
-} {1 {can not import primitive type "double"}}
+} {1 {cannot import primitive type "double"}}
 
 test JavaImportCmd-3.12 {error to import a primitive type} {
     forget_all
     list [catch {java::import byte} err] $err
-} {1 {can not import primitive type "byte"}}
+} {1 {cannot import primitive type "byte"}}
 
 test JavaImportCmd-3.13 {error to import a primitive type} {
     forget_all
     list [catch {java::import short} err] $err
-} {1 {can not import primitive type "short"}}
+} {1 {cannot import primitive type "short"}}
 
 test JavaImportCmd-3.14 {error to import a primitive type} {
     forget_all
     list [catch {java::import short} err] $err
-} {1 {can not import primitive type "short"}}
+} {1 {cannot import primitive type "short"}}
 
 test JavaImportCmd-3.15 {error to import a primitive type} {
     forget_all
     list [catch {java::import char} err] $err
-} {1 {can not import primitive type "char"}}
+} {1 {cannot import primitive type "char"}}
 
 test JavaImportCmd-3.16 {error to import a primitive type} {
     forget_all
     list [catch {java::import -package java.lang char} err] $err
-} {1 {can not import primitive type "char"}}
+} {1 {cannot import primitive type "char"}}
 
 test JavaImportCmd-3.17 {error to forget a primitive type} {
     forget_all
     list [catch {java::import -forget char} err] $err
-} {1 {can not forget primitive type "char"}}
+} {1 {cannot forget primitive type "char"}}
 
 test JavaImportCmd-3.18 {error to give -package argument after class names} {
     forget_all
@@ -242,17 +242,17 @@ test JavaImportCmd-3.20 {good import followed by bad import invalidates them bot
     forget_all
     list [catch {java::import java.util.Hashtable java.util.NOT_THERE} err] \
 	 $err [java::import]
-} {1 {can not import class "java.util.NOT_THERE", it does not exist} {}}
+} {1 {cannot import class "java.util.NOT_THERE", it does not exist} {}}
 
 test JavaImportCmd-3.21 {importing from global package is not allowed} {
     forget_all
     list [catch {java::import GlobalClass} err] $err
-} {1 {can not import from global package}}
+} {1 {cannot import from global package}}
 
 test JavaImportCmd-3.22 {forget from global package is not allowed} {
     forget_all
     list [catch {java::import -forget GlobalClass} err] $err
-} {1 {can not forget from global package}}
+} {1 {cannot forget from global package}}
 
 test JavaImportCmd-3.23 {importing the empty string is not allowed} {
     forget_all
@@ -265,7 +265,7 @@ test JavaImportCmd-3.24 {error to forget a package that was not imported} {
     set l {}
     java::import java.util.Hashtable
     list [catch {java::import -forget -package java.net} err] $err
-} {1 {can not forget package "java.net", no classes were imported from it}}
+} {1 {cannot forget package "java.net", no classes were imported from it}}
 
 
 # Test the command combined with other java::* commands
